--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ image: "/assets/images/Aska_Intel_EdTech.svg"
 
 
 <p class="mt-4">
-    ITインフラを通じて、裏方として教育現場のサポート・改善に貢献します。
+    <!-- 「保護者と教職員の支援」をメインテーマに、コミュニティとして教職員の先生たちを裏方としてサポートします。 -->
+    ITインフラを通じて、裏方として教育現場のサポート・改善に貢献
 </p>
 
     
