--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@ image: "/assets/images/Aska_Intel_EdTech.svg"
 </p>
 
     
+<p class="mt-6">
+    昨今、教員の働き方改革が大きな問題となっています。
+    学校の先生は、学級経営をするうえで、子どもや保護者とのコミュニケーションに関連する様々な課題に直面しますが、その難易度は年々上がっているように見受けられます。
+    複雑な事情を俯瞰し、総合的な判断が求められる場合があります。
+    誰かのアドバイスが絶対に正しい保証もありません。
+    そういった課題を、先生方個人の能力ですべて解決することは困難です。
+</p>
+
+<p>
+    先生方が抱えられているそのような課題に対し支援を行うことは、当社のミッションである「世界をもっと理解できるようにする」に位置付けられます。
+    包括的に教員支援および保護者支援に取り組み、その中で当社の強みも活かすことで、裏方として教育現場に貢献したいと考えています。
+</p>
 
 
 {% endif %} <!--endif page url is / -->
